<resources>
    <string name="app_name">PopularMovies</string>

    <!--Tools-->
    <string name="tool_original_title">Chappie</string>
    <string name="tool_plot_synopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus movieID tincidunt lorem. Mauris vulputate viverra nisl, convallis venenatis ex imperdiet sit amet. Aliquam erat volutpat. Sed sed elit sit amet sem viverra consectetur eu ut ipsum. Pellentesque molestie semper eros, at luctus nisi auctor feugiat. Suspendisse auctor sagittis velit eget euismod. Proin porta urna in imperdiet malesuada. Aenean ac commodo eros. Sed vel lacus et nisi semper auctor vel non erat. Pellentesque ac posuere eros. In sit amet sem mauris. </string>
    <string name="tool_user_rating">3.5/10</string>
    <string name="tool_release_date">2016</string>
    <string name="tool_movie_length">120min</string>
    <string name="tool_review_author">Sasuke Uchiha</string>

    <!--Labels-->
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="try_again_label">Try Again</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_most_popular">Most popular</string>
    <string name="action_favorites">Favorites</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="read_more_label">Read More</string>


     <!--Messages-->
    <string name="network_error_message">Unable to load movies. Please check your network connection :\'(</string>

    <!--Content Description-->
    <string name="content_description_movie_poster">Movie Poster</string>
    <string name="content_description_favorite_icon">Favorite icon</string>
    <string name="content_description_cloud_off">Cloud off</string>
</resources>
