<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.juantorres.popularmovies.MovieDetailFragment"
    >

    <ImageView
        android:id="@+id/iv_movie_poster_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        tools:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="300dp"
        android:minWidth="150dp"/>

    <TextView
        android:id="@+id/tv_movie_release_year"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        tools:text="@string/tool_release_date"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/iv_movie_poster_small"
        android:layout_marginTop="32dp" />

    <!--<TextView-->
        <!--android:id="@+id/tv_movie_duration"-->
        <!--style="?android:attr/textAppearanceLarge"-->
        <!--android:textStyle="italic"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:text="@string/tool_movie_length"-->
        <!--app:layout_constraintLeft_toLeftOf="@+id/guideline"-->
        <!--android:layout_marginTop="16dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_year" />-->

    <TextView
        android:id="@+id/tv_movie_rating"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tool_user_rating"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_year" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_movie_rating"
        android:layout_marginLeft="7dp"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_rating"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_rating"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/tool_plot_synopsis"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster_small" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>